# minimal_sdl_cegui

./: CMakeLists.txt  README.md  main.cpp
datafiles/: datafiles
datafiles/layouts/: gui.layout
